# map2minecraft

./: .env.example  .gitignore  Cargo.toml  railway.toml
.next/: trace  trace-build
crates/arnis-core/: Cargo.toml
crates/arnis-core/src/: elevation_data.rs  ground.rs  gui.rs  lib.rs  main.rs  retrieve_data.rs
crates/arnis-worker/: Cargo.toml
crates/arnis-worker/src/: bluemap.rs  config.rs  jobs.rs  main.rs  preview.rs  routes.rs  storage.rs
docker/: Dockerfile.web  Dockerfile.worker
web/: next.config.ts  package-lock.json  package.json
web/public/: manifest.json  robots.txt  sitemap.xml
web/src/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
web/src/app/api/bluemap/[jobId]/[[...path]]/: route.ts
web/src/app/api/download/[jobId]/: route.ts
web/src/app/api/generate/: route.ts
web/src/app/api/preview/[jobId]/: route.ts
web/src/app/api/status/[jobId]/: route.ts
web/src/app/api/stripe/checkout/: route.ts
web/src/app/api/stripe/webhook/: route.ts
web/src/app/cities/: page.tsx
web/src/app/cities/[slug]/: page.tsx
web/src/app/create/: page.tsx
web/src/app/create/success/: page.tsx
web/src/components/brand/: Logo.tsx
web/src/components/create/: CheckoutSection.tsx  GenerationOptions.tsx  GenerationProgress.tsx
web/src/components/layout/: Footer.tsx  Navbar.tsx
web/src/components/map/: MapInner.tsx  MapSelector.tsx  MiniMap.tsx
web/src/components/preview/: WorldPreview.tsx
web/src/lib/: cities.ts  store.ts  utils.ts
