[package]
name = "arnis-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
arnis-core = { path = "../arnis-core", default-features = false, features = ["bedrock"] }
axum = { version = "0.8", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
redis = { version = "0.27", features = ["aio", "tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
futures = "0.3"
tokio-stream = "0.1"
flate2 = "1.1"
walkdir = "2"
tar = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
async-stream = "0.3"
fastanvil = "0.32.0"
fastnbt = "2.6.0"
